# rd-django-social

./: README.md  pyproject.toml
project/: settings.py  urls.py
